@@ -7,6 +7,10 @@ See the file NEWS for changes that affect all versions of R.
 R 2.3.0
 =======
 
+There is no longer a separate 'East Asian' version of R.dll.
+(msvcp60.dll is no longer used as libmingwex now supplies suitable
+functions.  How good they are remains to be seen!)
+
 There is a new function choose.dir() to choose a folder (as used for
 'Change dir...' on the File menu in RGui.)
 
@@ -68,6 +72,11 @@ to do so).
 
 Import libraries are now made by default without -k (--kill-at).  This
 might be relevant for contributed software using R's macros.
+
+Unicode characters are used to draw on the windows() family of device
+in multi-byte locales.  (This allows the user to select a locale other
+than the one Windows is running in: beware though that Windows has a
+habit of resetting the locale when a device is opened.)
 
 
 
